tests/machine/x/kotlin/list_nested_assign.error
line 63:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/list_nested_assign.kt:63:14: error: the integer literal does not conform to the expected type MutableList<MutableList<Int>>
    matrix = 5
             ^

 62:     var matrix = mutableListOf(mutableListOf(1, 2), mutableListOf(3, 4))
 63:     matrix = 5
 64:     println(matrix[1][0])
